update.pug file

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,4 +10,5 @@ a {
 .hauntedplacesAttr {
   background-color: aquamarine;
   width: 120px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   }
