--- a/views/haunted_placesdetail.pug
+++ b/views/haunted_placesdetail.pug
@@ -8,14 +8,14 @@ block content
 
  div
    div.row
-     div(class='hauntedplacesAttr mr-3') Haunted places ID is:
+     div(class='hauntedplacesAttr mr-3') ID for the haunted place is:
      div #{hauntedplacesid}
    div.row
-     div(class='hauntedplacesAttr mr-3') Haunted places address is:
+     div(class='hauntedplacesAttr mr-3') Address of the haunted place is:
      div #{hauntedplacesaddress}
    div.row
-     div(class='hauntedplacesAttr mr-3') Haunted places year is:
+     div(class='hauntedplacesAttr mr-3') Year of incident happened at the haunted place is:
      div #{hauntedplacesyear}
    div.row
-     div(class='hauntedplacesAttr mr-3') Haunted places description is:
+     div(class='hauntedplacesAttr mr-3') Description of the incident at the haunted place is:
      div #{hauntedplacesdescription}
