--- a/views/hauntedplaces.pug
+++ b/views/hauntedplaces.pug
@@ -8,6 +8,17 @@ block content
   -
     //let items=[{"address":"1 Raynham Hall, East Raynham, Fakenham NR21 7EP, UK","year":1835,"description":"Brown Lady of Raynham Hall"},{"address":"8 Potters Pond, Wotton-under-Edge GL12 7HF, United Kingdom","year":1500,"description":"The Witch's Room"},{"address":"405 Spray Ave, Banff, AB T1L 1J4, Canada","year":1920,"description":"Ghost Bride"},{"address":"333 E Wonderview Ave, Estes Park, CO 80517","year":1911,"description":"Room 217"},{"address":"Trương Định, Phường Bến Thành, Quận 1, Thành phố Hồ Chí Minh, Vietnam","year":1989,"description":"Ghost of a young man"}]
     let items=results
+  div(class="container-fluid")
+    div(class="row m-1")
+      each item in items
+        - let destination = `dispatch(\"/hauntedplaces/update?id=${item._id}\")`
+        div(class="row-sm-2", class="m-1") Address: #{item.address} (year: #{item.year}), description is #{item.description}. 
+          button.btn( class="btn-primary ml-1", onclick= destination) Update
+
+    script.
+      function dispatch(path){
+        window.location.href=path
+      }
 
   div.container-fluid
     div.row
