--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
     a(href="/register") Register
   if (user)
     p You are currently logged in as #{user.username}
-    a(href="/hauntedplaces") Take me to costumes
+    a(href="/hauntedplaces") Take me to haunted places
     br
     a(href="/logout") Logout
   
