--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,9 @@ block content
     a(href="/hauntedplaces") Take me to haunted places
     br
     a(href="/logout") Logout
+
+
+  //button(type="button", class="btn btn-success", onClick="update()") Press Me!
   
   <br>
   <br>
