--- a/views/hauntedplaces.pug
+++ b/views/hauntedplaces.pug
@@ -10,10 +10,16 @@ block content
     let items=results
   div(class="container-fluid")
     div(class="row m-1")
+      - let destination3 = `dispatch(\"/hauntedplaces/create\")`
+      button.btn( class="btn-primary", onclick= destination3) Create a new record
       each item in items
         - let destination = `dispatch(\"/hauntedplaces/update?id=${item._id}\")`
+        - let destination1 = `dispatch(\"/hauntedplaces/detail?id=${item._id}\")`
+        - let destination2 = `dispatch(\"/hauntedplaces/delete?id=${item._id}\")`
         div(class="row-sm-2", class="m-1") Address: #{item.address} (year: #{item.year}), description is #{item.description}. 
           button.btn( class="btn-primary ml-1", onclick= destination) Update
+          button.btn( class="btn-primary ml-1", onclick= destination1) Detail
+          button.btn( class="btn-primary ml-1", onclick= destination2) Delete
 
     script.
       function dispatch(path){
